Add settings / defaults

--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,9 @@ STATAMIC_STATIC_CACHING_STRATEGY=null
 STATAMIC_REVISIONS_ENABLED=false
 STATAMIC_GRAPHQL_ENABLED=false
 STATAMIC_API_ENABLED=true
-STATAMIC_GIT_ENABLED=true
+STATAMIC_GIT_ENABLED=false
+
+# CP_ROUTE=''
 
 LOG_CHANNEL=stack
 
