--- a/resources/fieldsets/page_builder_all.yaml
+++ b/resources/fieldsets/page_builder_all.yaml
@@ -15,6 +15,11 @@ fields:
           fields:
             -
               import: collection_archive
+        form:
+          display: Formulier
+          fields:
+            -
+              import: form
       display: Blokken
       type: replicator
       icon: replicator
