--- a/starter-kit.yaml
+++ b/starter-kit.yaml
@@ -12,6 +12,7 @@ export_paths:
   - content/navigation
   - content/collections
   - content/trees
+  - content/assets
   - config/duplicator.php
   - config/font-awesome.php
 dependencies:
