--- a/content/collections/pages.yaml
+++ b/content/collections/pages.yaml
@@ -1,5 +1,5 @@
 title: Pages
+revisions: false
+route: "{parent_uri}/{slug}"
 structure:
   root: true
-route: '{parent_uri}/{slug}'
-propagate: true
