Update whole starter-kit

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 APP_NAME=Statamic
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:m2AzUPayJuzZdpVlLcPcmBeD8rApCLWTOwcL+d8cEO0=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://[SITENAME].test
 
 STATAMIC_LICENSE_KEY=
 STATAMIC_STACHE_WATCHER=true
@@ -12,12 +12,14 @@ STATAMIC_GRAPHQL_ENABLED=false
 STATAMIC_API_ENABLED=true
 STATAMIC_GIT_ENABLED=false
 
+FRONTEND_URL=http://localhost:3000
+
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=starter_kit
 DB_USERNAME=root
 DB_PASSWORD=
 
@@ -58,10 +60,11 @@ DEBUGBAR_ENABLED=false
 # Addons
 # ------------------------------------------------------------------------------
 # Fontawesome - https://statamic.com/addons/aerni/font-awesome
-FA_API_TOKEN=
-FA_KIT_TOKEN=
+FA_API_TOKEN=873A3174-8A2C-4083-9DED-7DD37CC5044B
+FA_KIT_TOKEN=316dcd6a19
+
 
 # Netlify
-NETLIFY_ACCESS_TOKEN=
+NETLIFY_ACCESS_TOKEN=7MMXtnBym1k47hf4I6pCpdMjArFfm6XMnbkXm_atXiw
 NETLIFY_SITE=
 NETLIFY_BUILD_HOOK=
