--- a/content/trees/navigation/main.yaml
+++ b/content/trees/navigation/main.yaml
@@ -2,3 +2,9 @@ tree:
   -
     id: 8f5080d1-8775-40f9-98dd-e506f86af5c2
     entry: home
+  -
+    id: dd44a0e4-c5b8-4326-add7-a41f36e28f9f
+    entry: 2905308d-2730-441e-8de5-13b878152b45
+  -
+    id: 890b3767-04e6-4b29-a8b1-f5188e715b33
+    entry: c421b192-9e4a-41a2-b90a-e3f7e1573825
