--- a/content/collections/pages.yaml
+++ b/content/collections/pages.yaml
@@ -1,5 +1,8 @@
 title: Pages
+template: default
+layout: layout
 revisions: false
-route: "{parent_uri}/{slug}"
+route: '{parent_uri}/{slug}'
+sort_dir: asc
 structure:
   root: true
