--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,8 @@ STATAMIC_GRAPHQL_ENABLED=false
 STATAMIC_API_ENABLED=true
 STATAMIC_GIT_ENABLED=false
 
+FRONTEND_URL=http://localhost:3000
+
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
