--- a/content/assets/assets.yaml
+++ b/content/assets/assets.yaml
@@ -1,2 +1,9 @@
 title: Assets
 disk: assets
+allow_uploads: true
+allow_downloading: true
+allow_renaming: true
+allow_moving: true
+create_folders: true
+source_preset: default
+warm_presets: false
