--- a/content/collections/pages.yaml
+++ b/content/collections/pages.yaml
@@ -1,8 +1,13 @@
-title: Pages
+title: "Pagina's"
 template: default
 layout: layout
 revisions: false
 route: '{parent_uri}/{slug}'
 sort_dir: asc
+preview_targets:
+  -
+    label: Entry
+    url: '{permalink}'
+    refresh: true
 structure:
   root: true
