Set default timezone, extend api config

--- a/resources/fieldsets/helper_collection.yaml
+++ b/resources/fieldsets/helper_collection.yaml
@@ -55,6 +55,8 @@ fields:
       always_save: false
       if:
         collection_type: 'equals overview'
+      validate:
+        - required
   -
     handle: entries
     field:
