--- a/starter-kit.yaml
+++ b/starter-kit.yaml
@@ -1,5 +1,7 @@
 export_paths:
   - .env.example
+  - config/cors.php
+  - config/filesystems.php
   - config/statamic/api.php
   - config/statamic/assets.php
   - config/statamic/editions.php
@@ -23,4 +25,4 @@ export_paths:
   - content/seo
   - vite.config.js
 dependencies:
-  aerni/advanced-seo: ^2.1
+  aerni/advanced-seo: ^2.3
