--- a/starter-kit.yaml
+++ b/starter-kit.yaml
@@ -1,5 +1,6 @@
 export_paths:
   - .env.example
+  - config/app.php
   - config/cors.php
   - config/filesystems.php
   - config/statamic/api.php
@@ -7,6 +8,7 @@ export_paths:
   - config/statamic/editions.php
   - config/statamic/git.php
   - config/statamic/sites.php
+  - app/Http/Middleware/VerifyCsrfToken.php
   - app/Providers/AppServiceProvider.php
   - app/CustomEntry.php
   - app/CustomAsset.php
@@ -23,6 +25,8 @@ export_paths:
   - config/advanced-seo.php
   - resources/lang/vendor/advanced-seo
   - content/seo
+  - config/statamic/redirect.php
   - vite.config.js
 dependencies:
   aerni/advanced-seo: ^2.3
+  rias/statamic-redirect: ^3.1
