Add Bunny sftp filesystem

--- a/.env.example
+++ b/.env.example
@@ -47,7 +47,5 @@ DEBUGBAR_ENABLED=false
 # Addons
 # ------------------------------------------------------------------------------
 
-# Netlify
-NETLIFY_ACCESS_TOKEN=
-NETLIFY_SITE=
-NETLIFY_BUILD_HOOK=
+BUNNYCDN_SFTP_USERNAME=
+BUNNYCDN_SFTP_PASS=
