Add bunny hostname

--- a/.env.example
+++ b/.env.example
@@ -47,5 +47,6 @@ DEBUGBAR_ENABLED=false
 # Addons
 # ------------------------------------------------------------------------------
 
+BUNNYCDN_HOSTNAME=
 BUNNYCDN_SFTP_USERNAME=
 BUNNYCDN_SFTP_PASS=
