Better env. naming and add statamic api cache boolean

--- a/.env.example
+++ b/.env.example
@@ -5,12 +5,13 @@ APP_DEBUG=true
 APP_URL=http://localhost
 
 STATAMIC_LICENSE_KEY=
-STATAMIC_STACHE_WATCHER=true
+STATAMIC_STACHE_WATCHER=false
 STATAMIC_STATIC_CACHING_STRATEGY=null
 STATAMIC_REVISIONS_ENABLED=false
 STATAMIC_GRAPHQL_ENABLED=true
 STATAMIC_API_ENABLED=true
 STATAMIC_GIT_ENABLED=false
+STATAMIC_API_CACHE=true
 
 FRONTEND_URL=http://localhost:3000
 
@@ -47,6 +48,6 @@ DEBUGBAR_ENABLED=false
 # Addons
 # ------------------------------------------------------------------------------
 
-BUNNYCDN_HOSTNAME=
 BUNNYCDN_SFTP_USERNAME=
-BUNNYCDN_SFTP_PASS=
+BUNNYCDN_SFTP_PASSWORD=
+BUNNYCDN_URL=
